--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cssnano": "^7.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
     "eslint": "8.47.0",
