--- a/package.json
+++ b/package.json
@@ -51,13 +51,16 @@
     "form-data": "^4.0.5",
     "framer-motion": "^12.23.25",
     "gray-matter": "^4.0.3",
+    "html2canvas": "^1.4.1",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.3",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.447.0",
     "marked": "^15.0.12",
     "next": "^15.5.9",
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.12",
+    "puppeteer": "^24.34.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.68.0",
